--- a/lib/spiker/generators/templates/simple_app.rb.erb
+++ b/lib/spiker/generators/templates/simple_app.rb.erb
@@ -1,3 +1,4 @@
+require 'dotenv/load'
 require 'minitest'
 require 'minitest/autorun'
 require 'minitest/reporters'
@@ -5,8 +6,12 @@ require 'minitest/reporters'
 Minitest::Reporters.use!
 
 class <%= config[:name_as_class] %>Test < Minitest::Test
-  def test_that_it_works
-    assert true
+  def test_name
+    assert_equal "Fred", <%= config[:name_as_class %>.new(name: 'Fred').name
+  end
+
+  def test_default_env_value
+    assert_equal "test", ENV["TEST_VALUE"]
   end
 end
 
