fixing erb template syntax error

--- a/lib/spiker/generators/templates/simple_app.rb.erb
+++ b/lib/spiker/generators/templates/simple_app.rb.erb
@@ -7,7 +7,7 @@ Minitest::Reporters.use!
 
 class <%= config[:name_as_class] %>Test < Minitest::Test
   def test_name
-    assert_equal "Fred", <%= config[:name_as_class %>.new(name: 'Fred').name
+    assert_equal "Fred", <%= config[:name_as_class] %>.new(name: 'Fred').name
   end
 
   def test_default_env_value
