removing redundent prefixes after organizing by folder

--- a/lib/spiker/generators/templates/multi/app_test.rb.erb
+++ b/lib/spiker/generators/templates/multi/app_test.rb.erb
@@ -2,7 +2,7 @@
 
 require 'test_helper'
 
-class <%= config[:name_as_class] %>Test < MiniTest::Unit::TestCase
+class <%= config[:name_as_class] %>Test < MiniTest::Test
   def test_default_class_instantiates
     assert <%= config[:name_as_class] %>.new
   end
