--- a/lib/spiker/templates/multi/test_helper.rb.tt
+++ b/lib/spiker/templates/multi/test_helper.rb.tt
@@ -11,7 +11,7 @@ require "dotenv/load"
 Minitest::Reporters.use!
 
 # ensure the environment is available
-class DefaultEnvironmentTest < MiniTest::Test
+class DefaultEnvironmentTest < Minitest::Test
   def test_default_environment
     assert_equal "test", ENV.fetch("TEST_VALUE", nil)
   end
