--- a/lib/spiker/templates/given/Gemfile.tt
+++ b/lib/spiker/templates/given/Gemfile.tt
@@ -6,8 +6,12 @@ git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
 gem "minitest"
 gem "minitest-reporters"
+gem "minitest-given"
+
 gem "guard"
 gem "guard-minitest"
+
 gem "dotenv"
 
 gem "rubocop"
+gem "ruby-lsp"
