--- a/lib/spiker/templates/multi/Gemfile.tt
+++ b/lib/spiker/templates/multi/Gemfile.tt
@@ -6,10 +6,9 @@ git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
 gem "minitest"
 gem "minitest-reporters"
-
 gem "guard"
 gem "guard-minitest"
-
 gem "dotenv"
 
 gem "rubocop"
+gem "ruby-lsp"
