--- a/lib/spiker/templates/simple/Gemfile.tt
+++ b/lib/spiker/templates/simple/Gemfile.tt
@@ -6,7 +6,6 @@ git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
 gem "minitest"
 gem "minitest-reporters"
-gem "minitest-given"
 
 gem "guard"
 gem "guard-minitest"
@@ -14,3 +13,4 @@ gem "guard-minitest"
 gem "dotenv"
 
 gem "rubocop"
+gem "ruby-lsp"
