cleanup and switch from require_relative to require
requires were spread around the gem, moved to lib/spiker.rb and switched
to absoluted requires instead of relative.

--- a/lib/spiker/templates/simple/app.rb.tt
+++ b/lib/spiker/templates/simple/app.rb.tt
@@ -17,7 +17,7 @@ class <%= config[:name_as_class] %>Test < Minitest::Test
   end
 
   def test_default_env_value
-    assert_equal "test", ENV["TEST_VALUE"]
+    assert_equal "test", ENV.fetch("TEST_VALUE", nil)
   end
 end
 
